--- a/package.json
+++ b/package.json
@@ -32,21 +32,26 @@
     "@react-pdf-viewer/default-layout": "^3.9.0",
     "@react-pdf-viewer/locales": "^1.0.0",
     "antd": "^4.18.6",
+    "common-module": "^0.0.28",
     "fr-generator": "^2.8.4",
     "handsontable": "^12.2.0",
+    "hoc-form": "^2.0.1-beta",
     "idb-keyval": "^6.2.0",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "monaco-editor": "^0.34.1",
     "pdfjs-dist": "^3.1.81",
     "react": "17.x",
     "react-dom": "17.x",
+    "schema-form": "^0.0.1",
     "three": "^0.148.0",
     "umi": "^3.5.20"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@types/lodash": "^4.14.200",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/three": "^0.146.0",
