feat: 组织架构图

--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@antv/x6": "^2.18.1",
+    "@antv/x6-plugin-export": "^2.1.6",
+    "@antv/x6-plugin-minimap": "^2.0.7",
+    "@antv/x6-plugin-scroller": "^2.0.10",
+    "@antv/x6-react-shape": "2.0.8",
     "@designable/formily-antd": "^1.0.0-beta.45",
     "@formily/antd": "^2.0.9",
     "@formily/core": "^2.0.9",
@@ -34,14 +39,18 @@
     "@react-pdf-viewer/core": "^3.9.0",
     "@react-pdf-viewer/default-layout": "^3.9.0",
     "@react-pdf-viewer/locales": "^1.0.0",
+    "@types/dagre": "^0.7.52",
     "antd": "^4.18.6",
     "common-module": "^0.0.28",
+    "dagre": "^0.8.5",
+    "eventemitter3": "^4.0.7",
     "fr-generator": "^2.8.4",
     "handsontable": "^12.2.0",
     "hoc-form": "^2.0.1-beta",
     "idb-keyval": "^6.2.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "lodash.get": "4.4.2",
     "moment": "^2.29.1",
     "monaco-editor": "^0.34.1",
     "pdfjs-dist": "^3.1.81",
@@ -50,9 +59,7 @@
     "schema-form": "^0.0.1",
     "styled-components": "^6.1.11",
     "three": "^0.148.0",
-    "umi": "^3.5.20",
-    "lodash.get": "4.4.2",
-    "eventemitter3": "^4.0.7"
+    "umi": "^3.5.20"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
