--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@antv/x6-plugin-minimap": "^2.0.7",
     "@antv/x6-plugin-scroller": "^2.0.10",
     "@antv/x6-react-shape": "2.0.8",
+    "@antv/g6": "4.8.21",
+    "@antv/hierarchy": "^0.6.12",
     "@designable/formily-antd": "^1.0.0-beta.45",
     "@formily/antd": "^2.0.9",
     "@formily/core": "^2.0.9",
